--- a/dirs-sys/Cargo.toml
+++ b/dirs-sys/Cargo.toml
@@ -3,6 +3,7 @@ name        = "dirs-sys-next"
 version     = "0.1.0"
 authors     = ["The @xdg-rs members"]
 description = "system-level helper functions for the dirs and directories crates"
+edition     = "2018"
 readme      = "README.md"
 license     = "MIT OR Apache-2.0"
 repository  = "https://github.com/xdg-rs/dirs/tree/master/dirs-sys"
