--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -19,12 +19,23 @@ jobs:
     strategy:
       matrix:
         os: [ubuntu-latest, macos-latest, windows-latest]
+        rust:
+          - nightly
+          - stable
+          # Minimum Rust version
+          - 1.34.0
     env:
       RUST_BACKTRACE: 1
     steps:
       - uses: actions/checkout@v2
-      - run: cargo build --all-targets --workspace
-      - run: cargo test --all-targets --workspace
+      - name: Install Rust toolchain
+        run:
+          rustup toolchain install ${{ matrix.rust }}
+          rustup default ${{ matrix.rust }}
+        if: matrix.rust != stable
+      - run: cargo build --all-targets --all
+      - run: cargo test --all-targets --all
+        if: matrix.rust == stable
 
   # FIXME: enable this when we fmt all the code
   #rustfmt:
@@ -33,15 +44,3 @@ jobs:
   #    - uses: actions/checkout@v2
   #    - run: rustup component add rustfmt
   #    - run: cargo fmt -- --check
-
-  minimum-rust-version:
-    runs-on: ${{ matrix.os }}
-    strategy:
-      matrix:
-        os: [ubuntu-latest, macos-latest, windows-latest]
-    steps:
-      - uses: actions/checkout@v2
-      - run: |
-          rustup toolchain install 1.34.0
-          rustup default 1.34.0
-      - run: cargo build --all-targets --all
