--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -45,24 +45,41 @@ jobs:
       - run: cargo fmt -- --check
 
   minimum-rust-version:
-    runs-on: ${{ matrix.os }}
-    strategy:
-      matrix:
-        os: [ubuntu-latest, macos-latest, windows-latest]
+    runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
       - run: |
           rustup toolchain install 1.34.0
           rustup default 1.34.0
-      - run: cargo build --all-targets --all
+          rustup target add \
+            x86_64-pc-windows-gnu \
+            x86_64-apple-darwin \
+            x86_64-pc-windows-msvc
+      - run: |
+          for target in x86_64-pc-windows-gnu x86_64-apple-darwin x86_64-pc-windows-msvc; do
+            echo "== checking $target =="
+            cargo check --all-targets --all --target "$target"
+          done
+        shell: bash
 
   clippy:
-    runs-on: ${{ matrix.os }}
-    strategy:
-      matrix:
-        os: [ubuntu-latest, macos-latest, windows-latest]
+    runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
-      - run: rustup component add clippy
-        # FIXME: Remove `-- -A clippy::option_as_ref_deref` when MSRV is bumped past 1.40.0
-      - run: cargo clippy --all --all-targets -- -A clippy::option_as_ref_deref
+      - run: |
+          rustup component add clippy
+          rustup target add \
+            x86_64-pc-windows-gnu \
+            x86_64-apple-darwin \
+            x86_64-pc-windows-msvc
+      - run: |
+          for target in x86_64-pc-windows-gnu x86_64-apple-darwin x86_64-pc-windows-msvc; do
+            echo "== checking $target =="
+            cargo check --all-targets --all --target "$target"
+            git ls-files '*lib.rs' | xargs touch
+            # FIXME: Remove `-- -A clippy::option_as_ref_deref` when MSRV is bumped past 1.40.0
+            cargo clippy --all-targets --all --target "$target" \
+              -- \
+              -A clippy::option_as_ref_deref
+          done
+        shell: bash
