--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -84,3 +84,25 @@ jobs:
               -A clippy::redundant_field_names
           done
         shell: bash
+
+  # These jobs doesn't actually test anything, but they're only used to tell
+  # bors the build completed, as there is no practical way to detect when a
+  # workflow is successful listening to webhooks only.
+  #
+  # ALL THE PREVIOUS JOBS NEED TO BE ADDED TO THE `needs` SECTION OF THIS JOB!
+  end-success:
+    name: bors build finished
+    runs-on: ubuntu-latest
+    needs: [build, redox_check, rustfmt, minimum-rust-version]
+    if: github.actor == 'bors[bot]' && success()
+    steps:
+      - name: mark the job as a success
+        run: exit 0
+  end-failure:
+    name: bors build finished
+    runs-on: ubuntu-latest
+    needs: [build, redox_check, rustfmt, minimum-rust-version]
+    if: github.actor == 'bors[bot]' && (failure() || cancelled())
+    steps:
+      - name: mark the job as a failure
+        run: exit 1
