--- a/bors.toml
+++ b/bors.toml
@@ -1,11 +1,4 @@
-status = [
-  "build (ubuntu-latest)",
-  "build (windows-latest)",
-  "build (macos-latest)",
-  "minimum-rust-version (ubuntu-latest)",
-  "minimum-rust-version (windows-latest)",
-  "minimum-rust-version (macos-latest)",
-]
+status = ["bors build finished"]
 
 # Default timeout is one hour
 timeout_sec = 600
