--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -93,16 +93,24 @@ jobs:
   end-success:
     name: bors build finished
     runs-on: ubuntu-latest
-    needs: [build]
-    if: github.event.pusher.name == 'bors' && success()
+    needs: [build, redox_check, rustfmt, minimum-rust-version]
+    # if: github.event.pusher.name == 'bors' && success()
+    if: success()
     steps:
+      - run: |
+          echo "${{ github.actor }}"
+          echo "${{ github.base_ref }}"
+          echo "${{ github.event_name }}"
+          echo "${{ github.ref }}"
+          echo "${{ github.event.push.pusher.name }}"
       - name: mark the job as a success
         run: exit 0
   end-failure:
     name: bors build finished
     runs-on: ubuntu-latest
-    needs: [build]
-    if: github.event.pusher.name == 'bors' && (failure() || cancelled())
+    needs: [build, redox_check, rustfmt, minimum-rust-version]
+    # if: github.event.pusher.name == 'bors' && (failure() || cancelled())
+    if: (failure() || cancelled())
     steps:
       - name: mark the job as a failure
         run: exit 1
