--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -26,7 +26,8 @@ jobs:
       - run: cargo build --all-targets --workspace
       - run: cargo test --all-targets --workspace
 
-  redox_check:
+  checks:
+    name: 'Check builds for non Tier-1 targets'
     runs-on: ubuntu-latest
     env:
       RUST_BACKTRACE: 1
@@ -34,8 +35,12 @@ jobs:
       - uses: actions/checkout@v2
       - run: |
           rustup default nightly
-          rustup target add x86_64-unknown-redox
-      - run: cargo check --all-targets --workspace --target x86_64-unknown-redox
+          rustup target add \
+            x86_64-unknown-redox \
+            wasm32-unknown-unknown
+      - run: |
+          cargo check --all-targets --workspace --target x86_64-unknown-redox
+          cargo check --all-targets --workspace --target wasm32-unknown-unknown
 
   rustfmt:
     runs-on: ubuntu-latest
@@ -93,7 +98,7 @@ jobs:
   end-success:
     name: bors build finished
     runs-on: ubuntu-latest
-    needs: [build, redox_check, rustfmt, minimum-rust-version]
+    needs: [build, checks, rustfmt, minimum-rust-version]
     if: github.actor == 'bors[bot]' && success()
     steps:
       - name: mark the job as a success
@@ -101,7 +106,7 @@ jobs:
   end-failure:
     name: bors build finished
     runs-on: ubuntu-latest
-    needs: [build, redox_check, rustfmt, minimum-rust-version]
+    needs: [build, checks, rustfmt, minimum-rust-version]
     if: github.actor == 'bors[bot]' && (failure() || cancelled())
     steps:
       - name: mark the job as a failure
