--- a/directories/Cargo.toml
+++ b/directories/Cargo.toml
@@ -14,6 +14,14 @@ readme      = "README.md"
 license     = "MIT OR Apache-2.0"
 repository  = "https://github.com/xdg-rs/dirs/tree/master/directories"
 keywords    = ["xdg", "basedir", "app_dirs", "path", "folder"]
+include = [
+    '/CHANGELOG.md',
+    '/Cargo.toml',
+    '/LICENSE-*',
+    '/README.md',
+    '/benches',
+    '/src',
+]
 
 [badges]
 maintenance = { status = "passively-maintained" }
