Move dirs crate under dirs directory
Unlike other two crates which live in sub-directories, having dirs
as root directory is kinda weird.

--- a/dirs/Cargo.toml
+++ b/dirs/Cargo.toml
@@ -30,7 +30,4 @@ maintenance = { status = "passively-maintained" }
 
 [dependencies.dirs-sys-next]
 version = "0.1"
-path = "dirs-sys"
-
-[workspace]
-members = ["dirs-sys", "directories"]
+path = "../dirs-sys"
