--- a/dirs-sys/Cargo.toml
+++ b/dirs-sys/Cargo.toml
@@ -25,4 +25,9 @@ libc = "0.2"
 redox_users = { version = "0.4.0", default-features = false }
 
 [target.'cfg(windows)'.dependencies]
-winapi = { version = "0.3", features = ["knownfolders", "objbase", "shlobj", "winbase", "winerror"] }
+windows-sys = { version = "0.45.0", features = [
+    "Win32_UI_Shell",
+    "Win32_Foundation",
+    "Win32_Globalization",
+    "Win32_System_Com",
+] }
